@@ -14,6 +14,9 @@ ver. 0.8.2 (2007/??/??) - stable
   Vincent Deffontaines
 - Fixed timezone bug with epoch date template. Thanks to
   Michael Hanselmann
+- Added "full line failregex" patch. Thanks to Yaroslav
+  Halchenko. It will be possible to create stronger failregex
+  against log injection
 
 ver. 0.8.1 (2007/08/14) - stable
 ----------
